# llm-pipeline-financial-documents

./: README.md  main_invoke.py  pyproject.toml  result-informe_de_rendimentos.yaml  test.py
documents/: informe_de_rendimentos.txt  nota_fiscal_de_servico.txt
prompts/classifier/: classification-field.yaml  system.yaml  tool.yaml  user.yaml
prompts/extractor/: system.yaml  user.yaml
prompts/informe_de_rendimentos/: system.yaml  user.yaml
prompts/nota_fiscal_de_servico/: system.yaml  user.yaml
src/llm_pipeline_financial_documents/: __init__.py  config.py  log.py  models.py  pipeline.py  prompt.py
src/llm_pipeline_financial_documents/assistants/: __init__.py  classifier.py  extractor.py
src/llm_pipeline_financial_documents/models/: __init__.py  informe.py  nfs.py
src/llm_pipeline_financial_documents/tools/: __init__.py  ocr.py
